tests/testcases/valid/types/09_incomplete_pointer_variable.ciel
// Test: Pointer to incomplete type as variable
// Expected: No error - pointers to incomplete types are allowed

struct ForwardDeclaredStruct;

struct ForwardDeclaredStruct* ptr;

struct ForwardDeclaredStruct {

};
