tests/testcases/invalid/semantic/56_incomplete_struct_member.ciel
// Test: Incomplete type used as struct member
// Expected: Error - incomplete type cannot be used as struct member

struct ForwardDeclaredStruct;

struct Container {
    struct ForwardDeclaredStruct member;
};
